--- a/_gulp/index.html
+++ b/_gulp/index.html
@@ -10,7 +10,7 @@
 
   <ul>
     <!-- <li><a target="_blank" href="./dist/index.html">Главная</a></li> -->
-    <li><a target="_blank" href="./dist/news-document.html">Докумень - новость</a></li>
+    <li><a target="_blank" href="./dist/news-document.html">Документ - новость</a></li>
     <li><a target="_blank" href="./dist/news.html">Список новостей</a></li>
     <li><a target="_blank" href="./dist/help.html">Помощь</a></li>
     <li><a target="_blank" href="./dist/register.html">Регистрация в интернет-магазине</a></li>
