--- a/_gulp/index.html
+++ b/_gulp/index.html
@@ -9,14 +9,13 @@
   <h2>Список шаблонов проекта</h2>
 
   <ul>
-    <!-- <li><a target="_blank" href="./dist/index.html">Главная</a></li> -->
+    <li><a target="_blank" href="./dist/index.html">Главная</a></li>
     <li><a target="_blank" href="./dist/news-document.html">Документ - новость</a></li>
     <li><a target="_blank" href="./dist/news.html">Список новостей</a></li>
     <li><a target="_blank" href="./dist/help.html">Помощь</a></li>
     <li><a target="_blank" href="./dist/register.html">Регистрация в интернет-магазине</a></li>
-    <!-- <li><a target="_blank" href="./dist/client.html">Стать клиентом</a></li>
-
-     -->
+    <!-- <li><a target="_blank" href="./dist/client.html">Стать клиентом</a></li> -->
+    <li><a target="_blank" href="./dist/ua-special-offers.html">Личный кабинет - специальные предложения</a></li>
   </ul>
 
 </body>
