--- a/_gulp/index.html
+++ b/_gulp/index.html
@@ -16,6 +16,7 @@
     <li><a target="_blank" href="./dist/register.html">Регистрация в интернет-магазине</a></li>
     <!-- <li><a target="_blank" href="./dist/client.html">Стать клиентом</a></li> -->
     <li><a target="_blank" href="./dist/ua-special-offers.html">Личный кабинет - специальные предложения</a></li>
+    <li><a target="_blank" href="./dist/ua-state-of-account.html">Личный кабинет - состояние счета</a></li>
   </ul>
 
 </body>
