--- a/_gulp/index.html
+++ b/_gulp/index.html
@@ -15,8 +15,10 @@
     <li><a target="_blank" href="./dist/help.html">Помощь</a></li>
     <li><a target="_blank" href="./dist/register.html">Регистрация в интернет-магазине</a></li>
     <!-- <li><a target="_blank" href="./dist/client.html">Стать клиентом</a></li> -->
+    <li><a target="_blank" href="./dist/ua-user-account.html">Личный кабинет</a></li>
     <li><a target="_blank" href="./dist/ua-special-offers.html">Личный кабинет - специальные предложения</a></li>
     <li><a target="_blank" href="./dist/ua-state-of-account.html">Личный кабинет - состояние счета</a></li>
+    <li><a target="_blank" href="./dist/ua-order-details.html">Личный кабинет - детали заказа</a></li>
   </ul>
 
 </body>
