--- a/_gulp/index.html
+++ b/_gulp/index.html
@@ -20,6 +20,7 @@
     <li><a target="_blank" href="./dist/ua-state-of-account.html">Личный кабинет - состояние счета</a></li>
     <li><a target="_blank" href="./dist/ua-order-details.html">Личный кабинет - детали заказа</a></li>
     <li><a target="_blank" href="./dist/ua-product.html">Личный кабинет - товар</a></li>
+    <li><a target="_blank" href="./dist/ua-chat.html">Личный кабинет - чат с менеджером</a></li>
   </ul>
 
 </body>
