--- a/_gulp/index.html
+++ b/_gulp/index.html
@@ -21,6 +21,8 @@
     <li><a target="_blank" href="./dist/ua-order-details.html">Личный кабинет - детали заказа</a></li>
     <li><a target="_blank" href="./dist/ua-product.html">Личный кабинет - товар</a></li>
     <li><a target="_blank" href="./dist/ua-chat.html">Личный кабинет - чат с менеджером</a></li>
+    <li><a target="_blank" href="./dist/ua-history-search.html">Личный кабинет - история поиска</a></li>
+    <li><a target="_blank" href="./dist/ua-my-orders.html">Личный кабинет - мои заказы</a></li>
   </ul>
 
 </body>
