--- a/_gulp/index.html
+++ b/_gulp/index.html
@@ -10,11 +10,13 @@
 
   <ul>
     <li><a target="_blank" href="./dist/index.html">Главная</a></li>
+    <li><a target="_blank" href="./dist/index-canvas.html">Главная - фон</a></li>
+    <li><a target="_blank" href="./dist/index-canvas2.html">Главная - фон2</a></li>
     <li><a target="_blank" href="./dist/news-document.html">Документ - новость</a></li>
     <li><a target="_blank" href="./dist/news.html">Список новостей</a></li>
     <li><a target="_blank" href="./dist/help.html">Помощь</a></li>
     <li><a target="_blank" href="./dist/register.html">Регистрация в интернет-магазине</a></li>
-    <!-- <li><a target="_blank" href="./dist/client.html">Стать клиентом</a></li> -->
+    <li><a target="_blank" href="./dist/client.html">Стать клиентом</a></li>
     <li><a target="_blank" href="./dist/ua-user-account.html">Личный кабинет</a></li>
     <li><a target="_blank" href="./dist/ua-special-offers.html">Личный кабинет - специальные предложения</a></li>
     <li><a target="_blank" href="./dist/ua-state-of-account.html">Личный кабинет - состояние счета</a></li>
@@ -23,6 +25,11 @@
     <li><a target="_blank" href="./dist/ua-chat.html">Личный кабинет - чат с менеджером</a></li>
     <li><a target="_blank" href="./dist/ua-history-search.html">Личный кабинет - история поиска</a></li>
     <li><a target="_blank" href="./dist/ua-my-orders.html">Личный кабинет - мои заказы</a></li>
+    <li><a target="_blank" href="./dist/ua-payment-details.html">Личный кабинет - выставленные документы</a></li>
+    <li><a target="_blank" href="./dist/ua-search.html">Личный кабинет - результаты поиска запчасти по коду</a></li>
+    <li><a target="_blank" href="./dist/ua-shop-cart.html">Личный кабинет - корзина заказов</a></li>
+    <li><a target="_blank" href="./dist/ua-my-settings.html">Личный кабинет - мои настройки</a></li>
+
   </ul>
 
 </body>
