--- a/_gulp/index.html
+++ b/_gulp/index.html
@@ -10,8 +10,8 @@
 
   <ul>
     <li><a target="_blank" href="./dist/index.html">Главная</a></li>
-    <li><a target="_blank" href="./dist/index-canvas.html">Главная - фон</a></li>
-    <li><a target="_blank" href="./dist/index-canvas2.html">Главная - фон2</a></li>
+    <!-- <li><a target="_blank" href="./dist/index-canvas.html">Главная - фон</a></li> -->
+    <!-- <li><a target="_blank" href="./dist/index-canvas2.html">Главная - фон2</a></li> -->
     <li><a target="_blank" href="./dist/news-document.html">Документ - новость</a></li>
     <li><a target="_blank" href="./dist/news.html">Список новостей</a></li>
     <li><a target="_blank" href="./dist/help.html">Помощь</a></li>
