--- a/_gulp/index.html
+++ b/_gulp/index.html
@@ -29,7 +29,15 @@
     <li><a target="_blank" href="./dist/ua-search.html">Личный кабинет - результаты поиска запчасти по коду</a></li>
     <li><a target="_blank" href="./dist/ua-shop-cart.html">Личный кабинет - корзина заказов</a></li>
     <li><a target="_blank" href="./dist/ua-my-settings.html">Личный кабинет - мои настройки</a></li>
+  </ul>
 
+  <h2>Новые шаблоны</h2>
+
+  <ul>
+    <li><a target="_blank" href="./dist/about.html">О компании</a></li>
+    <li><a target="_blank" href="./dist/to-suggest-an-idea.html">Личный кабинет - предложения и отзывы</a></li>
+    <li><a target="_blank" href="./dist/to-suggest-an-idea-1-page.html">Личный кабинет - предложения и отзывы - 1 предложение</a></li>
+    <li><a target="_blank" href="./dist/ua-state-of-account--new.html">Личный кабинет - состояние счета</a></li>
   </ul>
 
 </body>
