--- a/_gulp/index.html
+++ b/_gulp/index.html
@@ -38,6 +38,7 @@
     <li><a target="_blank" href="./dist/to-suggest-an-idea.html">Личный кабинет - предложения и отзывы</a></li>
     <li><a target="_blank" href="./dist/to-suggest-an-idea-1-page.html">Личный кабинет - предложения и отзывы - 1 предложение</a></li>
     <li><a target="_blank" href="./dist/ua-state-of-account--new.html">Личный кабинет - состояние счета</a></li>
+    <li><a target="_blank" href="./dist/ua-user-account--new.html">Личный кабинет</a></li>
   </ul>
 
 </body>
