--- a/_gulp/index.html
+++ b/_gulp/index.html
@@ -2,13 +2,14 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Список шаблонов проекта</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <title>Шаблоны проекта APM</title>
 </head>
 <body>
 
-  <h2>Список шаблонов проекта</h2>
+  <h2>Шаблоны проекта APM</h2>
 
-  <ul>
+  <ol>
     <li><a target="_blank" href="./dist/index.html">Главная</a></li>
     <!-- <li><a target="_blank" href="./dist/index-canvas.html">Главная - фон</a></li> -->
     <!-- <li><a target="_blank" href="./dist/index-canvas2.html">Главная - фон2</a></li> -->
@@ -29,18 +30,21 @@
     <li><a target="_blank" href="./dist/ua-search.html">Личный кабинет - результаты поиска запчасти по коду</a></li>
     <li><a target="_blank" href="./dist/ua-shop-cart.html">Личный кабинет - корзина заказов</a></li>
     <li><a target="_blank" href="./dist/ua-my-settings.html">Личный кабинет - мои настройки</a></li>
-  </ul>
-
-  <h2>Новые шаблоны</h2>
-
-  <ul>
     <li><a target="_blank" href="./dist/about.html">О компании</a></li>
     <li><a target="_blank" href="./dist/to-suggest-an-idea.html">Личный кабинет - предложения и отзывы</a></li>
     <li><a target="_blank" href="./dist/to-suggest-an-idea-1-page.html">Личный кабинет - предложения и отзывы - 1 предложение</a></li>
     <li><a target="_blank" href="./dist/ua-state-of-account--new.html">Личный кабинет - состояние счета</a></li>
     <li><a target="_blank" href="./dist/ua-user-account--new.html">Личный кабинет</a></li>
     <li><a target="_blank" href="./dist/register-new.html">Регистрация NEW</a></li>
-  </ul>
+  </ol>
+
+  <style>
+    @media (max-width: 767px) {
+      ol {
+        font-size: 24px;
+      }
+    }
+  </style>
 
 </body>
 </html>
